--- a/personal/안태경/html-class/practice1.css
+++ b/personal/안태경/html-class/practice1.css
@@ -1,37 +1,136 @@
 @charset "UTF-8";
-
-/* css reset */
-* {
-  margin: 0px;
-  padding: 0px;
-}
-
-ul,
-ol {
-  list-style: none;
-}
-
+@import "../reset.css";
 a {
   text-decoration: none;
+  color: inherit;
 }
 
-/* header */
-header > table {
-  width: 100%;
+h1 {
+  font-size: 2rem;
+  font-weight: bolder;
 }
-
-/* body */
-table {
-  border: 2px black solid;
-  border-collapse: collapse;
+h2 {
+  font-size: 1.2rem;
+  font-weight: bold;
 }
 td,
 th {
-  border: 1px black solid;
+  border: 1px rgba(215, 215, 215, 0.67) solid;
   padding: 5px;
 }
-table .table_title {
-  background-color: brown;
+
+/* body */
+body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  background-color: #efefef;
+}
+
+/* header */
+header {
+  height: 40px;
+  width: 100%;
+  padding: 0 50px;
+
+  display: flex;
+  align-items: center;
+  background-color: #008275;
+}
+nav > ul {
+  display: flex;
+  color: white;
+  > li {
+    margin: 0px 10px;
+  }
+}
+
+.logo > img {
+  height: 30px;
+}
+
+/* intro__table */
+.intro__table {
+  > table {
+    width: 400px;
+  }
+}
+.table__title {
+  background-color: rgba(28, 161, 176, 0.818);
   text-align: center;
   color: white;
+}
+
+.person__photo {
+  width: 100%;
+}
+
+.annotation {
+  font-size: small;
+  color: blue;
+}
+
+/* section */
+section {
+  @media (max-width: 1300px) {
+    width: 800px;
+  }
+  @media (min-width: 1300px) {
+    width: 50%;
+  }
+  padding: 20px 30px;
+  background-color: white;
+  border-left: 1px solid rgba(123, 123, 123, 0.56);
+  border-right: 1px solid rgba(123, 123, 123, 0.56);
+}
+
+.person__name {
+  width: 100%;
+  padding: 10px 0;
+}
+
+.person__team {
+  width: 100%;
+  text-align: center;
+  font-size: smaller;
+
+  border: 2px rgb(228, 176, 97) solid;
+  border-collapse: collapse;
+}
+
+.aside_and_intro {
+  display: flex;
+  justify-content: space-between;
+  padding: 30px 0;
+}
+
+.aside__index {
+  width: 150px;
+  height: 90px;
+  border: rgba(123, 123, 123, 0.56) 1px solid;
+  margin-right: 20px;
+  > ol {
+    padding: 10px;
+    font-size: small;
+    > li:not(:first-of-type) {
+      margin-top: 6px;
+    }
+  }
+}
+
+.main > div {
+  margin-top: 25px;
+}
+
+/* footer */
+footer {
+  height: 150px;
+  width: 100%;
+
+  padding: 10px;
+
+  background-color: white;
+  border-top: 1px solid rgba(123, 123, 123, 0.56);
 }
