--- a/personal/안태경/safehomes/safehomes.css
+++ b/personal/안태경/safehomes/safehomes.css
@@ -32,11 +32,11 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: violet;
+  /* background-color: violet; */
   width: 100%;
 }
 section {
-  margin-top: 72px;
+  margin: 72px 0;
 }
 
 /* header */
@@ -73,7 +73,7 @@ nav {
 
 section[class*="main__banner"] {
   width: 100%;
-  margin-top: 0;
+  margin: 0;
   > div {
     display: flex;
     flex-direction: column;
@@ -121,7 +121,7 @@ div[class*="middle__intro"] {
   align-items: center;
 
   width: 1084px;
-  background-color: yellow;
+  /* background-color: yellow; */
   > section {
     display: flex;
     flex-direction: column;
@@ -167,11 +167,11 @@ div[class*="intro__boxes"] {
   grid-template-columns: repeat(3, 1fr);
   gap: 48px;
   width: 100%;
-  background-color: lightcoral;
+  /* background-color: lightcoral; */
   > div {
     width: 293px;
     height: 141px;
-    background-color: violet;
+    /* background-color: violet; */
   }
 }
 
@@ -185,10 +185,10 @@ div[class*="phone__mockups"] {
   margin-top: 72px;
   display: flex;
   flex-direction: column;
-  background-color: darkorange;
+  /* background-color: darkorange; */
   width: 100%;
   > section:nth-child(2n) {
-    background-color: cornflowerblue;
+    /* background-color: cornflowerblue; */
     flex-direction: row-reverse;
   }
 }
@@ -232,7 +232,7 @@ section[class*="price"] {
   width: 100%;
   line-height: 1.5em;
 
-  background-color: wheat;
+  /* background-color: wheat; */
   > div {
     display: flex;
     justify-content: space-between;
@@ -331,7 +331,7 @@ div[class*="review__user_info"] {
   > div {
     height: 50px;
     margin: 0 16px;
-    background-color: wheat;
+    /* background-color: wheat; */
     :first-child {
       margin-bottom: 8px;
       font-weight: bold;
@@ -350,9 +350,10 @@ section[class*="colored__link"] {
   justify-content: center;
   align-items: center;
 
-  background-color: var(--maincolor);
   width: 100%;
   height: 608px;
+  margin-bottom: 0;
+  background-color: var(--maincolor);
   > div {
     display: flex;
     flex-direction: column;
