style: 반응형 고려해서 코드 수정

--- a/personal/이광렬/HTML과제/style.css
+++ b/personal/이광렬/HTML과제/style.css
@@ -1,6 +1,7 @@
 body {
   font-family: Arial, sans-serif;
   color: #333d4b;
+  width: 100vw;
 }
 
 header {
@@ -18,6 +19,9 @@ header {
 }
 
 main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   margin-top: 72px;
 }
 
@@ -80,6 +84,7 @@ nav ul li:first-child {
   background-repeat: no-repeat;
   height: 100vh;
   max-height: 768px;
+  width: 100%;
   background-size: cover;
   background-position: right 0 bottom 0;
   position: relative;
@@ -147,10 +152,10 @@ section h2 {
 .card-style-one {
   display: flex;
   justify-content: space-between;
-  margin: 124px 472px 0;
+  margin-top: 124px;
   flex-direction: column;
   align-items: center;
-  width: 975px;
+  width: 100%;
 }
 .card-style-one h3 {
   margin-top: 22px;
@@ -183,10 +188,13 @@ section h2 {
 .card-style-two {
   display: flex;
   justify-content: space-between;
-  margin: 124px 472px 0;
+  margin-top: 124px;
   flex-direction: column;
   align-items: center;
-  width: 975px;
+  width: auto;
+}
+.card-style-two ul {
+  padding: 0 380px;
 }
 .card-style-two h3 {
   font-style: normal;
@@ -231,9 +239,10 @@ section h2 {
 
 #main-sec ul {
   display: flex;
-  flex-wrap: nowrap;
+  flex-wrap: wrap;
   gap: 48px;
   margin-top: 52px;
+  justify-content: center;
 }
 #main-sec a {
   margin-top: 24px;
@@ -255,7 +264,8 @@ section h2 {
 
 #main-trd ul {
   display: flex;
-  flex-wrap: nowrap;
+  flex-wrap: wrap;
+  justify-content: center;
   gap: 48px;
   margin-top: 52px;
 }
@@ -298,12 +308,18 @@ section h2 {
   flex-direction: column;
   align-items: center;
   margin-top: 198px;
+  width: 100%;
+  padding: 0 472px;
 }
 #main-5th ul {
   display: flex;
   flex-direction: column;
   align-content: center;
   gap: 169px;
+  width: 100%;
+}
+#main-5th li {
+  width: auto;
 }
 #main-5th img {
   width: 389px;
@@ -313,6 +329,7 @@ section h2 {
   display: flex;
   flex-direction: row;
   justify-content: center;
+  flex-wrap: wrap;
   gap: 244px;
 }
 #main-5th article div {
@@ -474,7 +491,7 @@ section h2 {
   gap: 42px;
 }
 #main-7th li {
-  width: 680px;
+  width: 50vw;
   background: #f2f3f4;
   border-radius: 16px;
   border: none;
@@ -558,12 +575,13 @@ section h2 {
 .card-list {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: center;
 }
 
 .card-item {
   border: none;
   margin-bottom: 20px;
+  width: 293px;
 }
 figure img {
   width: 293px;
@@ -575,7 +593,6 @@ figure img {
 footer {
   margin-top: 134px;
   background-color: #f8f9fa;
-  padding: 20px;
   text-align: center;
   width: 100vw;
 }
@@ -654,6 +671,7 @@ footer div {
 /* 캐러셀 슬라이드 설정 */
 
 .carousel-container {
+  position: relative;
   width: 100%;
   display: flex;
   overflow: hidden;
@@ -686,4 +704,33 @@ footer div {
   background-color: transparent;
   border: none;
   cursor: pointer;
+}
+
+@media (max-width: 1024px) {
+  header {
+    padding: 20px 10px;
+  }
+  #main-7th li {
+    width: 60vw;
+  }
+  section h2 {
+    font-size: 40px;
+  }
+  #banner h2 {
+    font-size: 48px;
+  }
+  footer section div h2 {
+    font-size: 48px;
+  }
+}
+@media (max-width: 480px) {
+  header {
+    padding: 20px 10px;
+  }
+  #main-7th li {
+    width: 60vw;
+  }
+  section h2 {
+    font-size: 32px;
+  }
 }
