--- a/personal/곽성재/js-assignment-css.css
+++ b/personal/곽성재/js-assignment-css.css
@@ -15,38 +15,55 @@
 
 h1 {
   text-align: center;
-  font-size: 3vw;
+  font-size: max(3vw, 24px);
   padding-block: 1.5rem;
 }
 
 h2 {
   font-weight: 700;
   text-align: center;
-  font-size: 8vw;
+  font-size: max(7vw, 48px);
+}
+/* SECTION WEATHER */
+#weather {
+  height: 4rem;
+}
+.wrap-weather {
+  display: flex;
+  align-items: center;
+  justify-content: end;
+  margin-right: 1rem;
+}
+.wrap-weather img {
+  width: 4rem;
+}
+.wrap-weather span {
+  font-size: 1.5rem;
 }
 
 #clock {
-  margin-top: 20vh;
+  margin-top: 15vh;
   width: 100%;
   letter-spacing: -0.2em;
 }
 
-#greeting {
-  display: flex;
-  justify-content: center;
-}
-
-/* codepen input */
-.login-box {
-  width: 50vw;
+/* SECTION GREETING, SECTION TODO */
+.login-box,
+.todo-box {
+  width: max(50vw, 396px);
   padding: 1rem 40px;
   box-sizing: border-box;
+  margin-inline: auto;
+  margin-bottom: 1rem;
 }
-.login-box .user-box {
+
+.login-box .input-box,
+.todo-box .input-box {
   position: relative;
 }
 
-.login-box .user-box input {
+.login-box .input-box input,
+.todo-box .input-box input {
   width: 100%;
   padding: 10px 0;
   font-size: 16px;
@@ -56,7 +73,8 @@ h2 {
   outline: none;
   background: transparent;
 }
-.login-box .user-box label {
+.login-box .input-box label,
+.todo-box .input-box label {
   position: absolute;
   top: 0;
   left: 0;
@@ -67,9 +85,45 @@ h2 {
   transition: 0.5s;
 }
 
-.login-box .user-box input:focus ~ label {
+.login-box .input-box input:focus ~ label,
+.todo-box .input-box input:focus ~ label {
   top: -20px;
   left: 0;
   color: #32a6ff;
   font-size: 1rem;
+}
+
+/* SECTION TODO */
+input[type="checkbox"] {
+  all: unset;
+  width: 14px;
+  height: 14px;
+  border: 1px solid #32a6ff;
+  border-radius: 2px;
+}
+input[type="checkbox"]:checked {
+  background-color: #32a6ff;
+}
+#todo input[type="checkbox"]:checked ~ span {
+  text-decoration: line-through;
+}
+
+#todoList {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.todo {
+  width: max(50vw, 396px);
+  padding-inline: 40px;
+  display: flex;
+  margin-bottom: 0.75rem;
+}
+.todo span {
+  margin-left: 8px;
+}
+.todo button {
+  margin-left: auto;
+  justify-items: end;
 }
